
syntax = "proto3";

package customerdb;

// The greeting service definition.
service CustomerDB {
  // Sends a greeting
  rpc addCustomer (CustomerDetails) returns (Status) {}
  rpc loginCustomer (Credentials) returns (LoginStatus) {}
  rpc logoutCustomer (sessionID) returns (Status) {}
}


message Credentials {
  string username = 1;
  string password = 2;
}
message sessionID {
  string sessionID = 1;
}

// The request message containing the user's name.
message CustomerDetails {
  string username = 1;
  string password = 2;
  bool customerType = 3;
  
}

// The response message containing the greetings
message Status {
  string responseType = 1;
  string message = 2;
}

//Login status containing the session ID 
message LoginStatus {
  string responseType = 1;
  string message = 2;
  string sessionID = 3;
}